Fix sidenote vertical alignment
The previous code doesn't play well with KaTeX rendering. In particular,
sidenote markers appearing immediately after inline KaTeX render at the
bottom, even with vertical-align: top.

Setting vertical-align: super, which is what <sup></sup> does, messes up
the line-height. This solution works quite well.

Cf. https://stackoverflow.com/questions/501671/superscript-in-css-only.

--- a/static/css/sidenotes.css
+++ b/static/css/sidenotes.css
@@ -40,8 +40,10 @@ article {
 .marginnote-label:nth-of-type(3)::before,
 .marginnote:nth-of-type(3)::before
 {
-  font-size: 0.7rem;
-  vertical-align: top;
+  font-size: smaller;
+  position: relative;
+  top: -0.5rem;
+  font-variant-numeric: tabular-nums;
 
   font-weight: normal;
 }
